--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -33,37 +33,38 @@
   .actions { margin-top:8px; display:flex; gap:8px; }
   .btn { padding:10px 12px; border-radius:10px; background:#111; color:#fff; font-size:14px; border:none; cursor:pointer; }
   .btn.ghost { background:#fff; color:#111; border:1px solid #ddd; }
+/* Karte */
+.mapwrap {
+  display:none;
+  height:calc(100vh - 112px);
+  overflow:hidden;
+  position:relative;
+  background:#000;
+  touch-action:none;
+  overscroll-behavior: contain;
+}
+.mapwrap.active { display:block; }
 
-  /* Karte */
-  .mapwrap {
-    display:none;
-    height:calc(100vh - 112px);
-    overflow:hidden;
-    position:relative;
-    background:#000;
-    touch-action:none;
-    overscroll-behavior: contain;
-  }
-  .mapwrap.active { display:block; }
+.map {
+  position:relative;
+  width:1920px;
+  height:1080px;
+  touch-action:none;
+  will-change: transform;
++ transform-origin: 0 0;   /* 👈 Anker oben/links – wichtig für korrektes pan/zoom */
+}
 
-  .map {
-    position:relative;
-    width:1920px;
-    height:1080px;
-    touch-action:none;
-    will-change: transform;
-  }
-
-  .map-img {
-    position:absolute;
-    inset:0;
-    width:100%;
-    height:100%;
-    object-fit:fill;
-    display:block;
-    user-select:none;
-    pointer-events:none;
-  }
+.map-img {
+  position:absolute;
+  inset:0;
+  width:100%;
+  height:100%;
+- object-fit:fill;
++ object-fit:contain;      /* oder Zeile weglassen; "fill" verzerrt die Karte */
+  display:block;
+  user-select:none;
+  pointer-events:none;
+}
 
 .pin {
   position: absolute;
@@ -820,6 +821,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
