--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -793,18 +793,27 @@ function renderList(areaIds){
   function closeSheet(){ document.getElementById('sheet').classList.remove('open'); }
 
   /* ====== Pin-Fokus ====== */
+const MAP_W = 1920, MAP_H = 1080;
 
 function getPinCenter(id) {
   const el = document.getElementById(`pin-${id}`);
   if (!el) return null;
 
-  // Mitte der Pin-BOX, unabhängig vom img (robust, egal ob img 70% oder 100%)
+  const dx = parseFloat(el.dataset.x);
+  const dy = parseFloat(el.dataset.y);
+
+  // Prozent → Pixel relativ zur Kartenbasis (oben/links = 0/0)
+  if (!Number.isNaN(dx) && !Number.isNaN(dy)) {
+    const cx = (dx / 100) * MAP_W;
+    const cy = (dy / 100) * MAP_H;
+    return { cx, cy };
+  }
+
+  // Fallback, falls mal kein data-x/y gesetzt ist:
   const cx = el.offsetLeft + el.offsetWidth  / 2;
   const cy = el.offsetTop  + el.offsetHeight / 2;
-
   return { cx, cy };
 }
-
 
   /* ====== Start ====== */
   render();
@@ -812,6 +821,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
