--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -793,12 +793,21 @@ function renderList(areaIds){
   function closeSheet(){ document.getElementById('sheet').classList.remove('open'); }
 
 
+// EINMAL global definieren – NICHT mehrfach!
+const MAP_W = (typeof MAP_W === 'number') ? MAP_W : 1920;
+
+
 function getPinCenter(id) {
   const el = document.getElementById(`pin-${id}`);
   if (!el) return null;
 
-  const dx = parseFloat(el.dataset.x);
-  const dy = parseFloat(el.dataset.y);
+  // data-x/y robust parsen (unterstützt "54,4" und "54.4")
+  const toNum = v => {
+    if (v == null) return NaN;
+    return parseFloat(String(v).replace(',', '.'));
+  };
+  const dx = toNum(el.dataset.x);
+  const dy = toNum(el.dataset.y);
 
   // Prozent → Pixel relativ zur Kartenbasis (oben/links = 0/0)
   if (!Number.isNaN(dx) && !Number.isNaN(dy)) {
@@ -807,10 +816,11 @@ function getPinCenter(id) {
     return { cx, cy };
   }
 
-  // Fallback, falls mal kein data-x/y gesetzt ist:
+  // Fallback: Mitte der Pin-Box (falls mal kein data-x/y gesetzt ist)
   const cx = el.offsetLeft + el.offsetWidth  / 2;
   const cy = el.offsetTop  + el.offsetHeight / 2;
   return { cx, cy };
+}
 }
 
   /* ====== Start ====== */
@@ -819,6 +829,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
