--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -797,21 +797,31 @@ function getPinCenter(id) {
   const el = document.getElementById(`pin-${id}`);
   if (!el) return null;
 
-  // data-x/y robust parsen (unterstützt "54,4" und "54.4")
-  const toNum = v => {
-    if (v == null) return NaN;
-    return parseFloat(String(v).replace(',', '.'));
-  };
-  const dx = toNum(el.dataset.x);
-  const dy = toNum(el.dataset.y);
+  // robustes Parsen (unterstützt "54,4" u. "54.4")
+  const toNum = v => v == null ? NaN : parseFloat(String(v).replace(',', '.'));
 
-  // Prozent → Pixel relativ zur Kartenbasis (oben/links = 0/0)
+  const dx = toNum(el.dataset.x);   // left in %
+  const dy = toNum(el.dataset.y);   // top in %
+  const wp = toNum(el.dataset.wp);  // box-breite in % (von MAP_W)
+
   if (!Number.isNaN(dx) && !Number.isNaN(dy)) {
-    const cx = (dx / 100) * MAP_W;
-    const cy = (dy / 100) * MAP_H;
+    // halbe Box-Breite in %-von-MAP_W
+    const halfW_pct_of_W = Number.isNaN(wp) ? 0 : wp / 2;
+
+    // halbe Box-Höhe in %-von-MAP_H (Icon ist quadratisch ⇒ HöhePx = BreitePx)
+    // Höhe% relativ zur KartenHöhe = (BreitePx / MAP_H)*100 = wp * (MAP_W / MAP_H)
+    const halfH_pct_of_H = Number.isNaN(wp) ? 0 : (wp * (MAP_W / MAP_H)) / 2;
+
+    const cx = ((dx + halfW_pct_of_W) / 100) * MAP_W;
+    const cy = ((dy + halfH_pct_of_H) / 100) * MAP_H;
     return { cx, cy };
   }
 
+  // Fallback, falls mal kein data-x/y gesetzt ist:
+  const cx = el.offsetLeft + el.offsetWidth  / 2;
+  const cy = el.offsetTop  + el.offsetHeight / 2;
+  return { cx, cy };
+}
   // Fallback: Mitte der Pin-Box (falls mal kein data-x/y gesetzt ist)
   const cx = el.offsetLeft + el.offsetWidth  / 2;
   const cy = el.offsetTop  + el.offsetHeight / 2;
@@ -825,6 +835,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
